--- a/release/mui-player-desktop-plugin/package.json
+++ b/release/mui-player-desktop-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mui-player-desktop-plugin",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Mui Player Desktop Plugin Javascript Library",
   "main": "dist/mui-player-desktop-plugin.min.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "danmaku"
   ],
   "author": "Leisbanon",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/muiplayer/hello-muiplayer/issues"
   },
