--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An excellent H5 video player framework",
   "main": "index.js",
   "scripts": {
-    "gulp": "gulp --staks",
+    "gulp": "npm run gulp:git",
+    "gulp:git": "cross-env ISSUED=stability gulp --staks",
+    "gulp:pro": "cross-env ISSUED=professional gulp --staks",
     "build": "cross-env NODE_ENV=production webpack",
     "start": "cross-env NODE_ENV=development webpack-dev-server --progress"
   },
@@ -59,8 +61,8 @@
     "dashjs": "^3.2.0",
     "flv.js": "^1.5.0",
     "hls.js": "^0.14.16",
-    "mui-player": "^1.4.3",
-    "mui-player-desktop-plugin": "^1.3.4",
-    "mui-player-mobile-plugin": "^1.0.2"
+    "mui-player": "^1.4.4",
+    "mui-player-desktop-plugin": "^1.3.5",
+    "mui-player-mobile-plugin": "^1.0.3"
   }
 }
