--- a/docs/package.json
+++ b/docs/package.json
@@ -50,7 +50,7 @@
     "textlint-rule-stop-words": "^2.0.8",
     "textlint-rule-terminology": "^2.1.4",
     "textlint-rule-write-good": "^1.6.2",
-    "vuepress": "1.8.2",
+    "vuepress": "^1.8.2",
     "vuepress-plugin-flowchart": "^1.4.2"
   },
   "dependencies": {
