Wrong API keyword update and partial problem repair

--- a/docs/docs/.vuepress/public/manifest.json
+++ b/docs/docs/.vuepress/public/manifest.json
@@ -15,6 +15,6 @@
     ],
 	"start_url": "/index.html",
 	"display": "standalone",
-	"background_color": "#fff",
-	"theme_color": "#3eaf7c"
+	"background_color": "#FFFFFF",
+	"theme_color": "#FFFFFF"
 }
