--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "axios": "^1.2.2",
     "core-js": "^3.8.0",
     "dashjs": "^3.2.0",
     "flv.js": "^1.5.0",
